End of section 12

--- a/client/src/app/members/member-detail/member-detail.component.html
+++ b/client/src/app/members/member-detail/member-detail.component.html
@@ -2,7 +2,7 @@
   <div class="col-4">
 
     <div class="card">
-      <img class="card-img-top img-thumbnail" src="{{member.photoUrl|| '.assets/user.png'}}" alt="{{member.knownAs}}">
+      <img class="card-img-top img-thumbnail" src="{{member.photoUrl || './assets/user.png'}}" alt="{{member.knownAs}}">
       <div class="card-body">
         <div>
           <strong>Location:</strong>
