--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -7,7 +7,7 @@
           <i class="fa fa-user"></i></button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" (click)="addLike(member)">
           <i class="fa fa-heart"></i></button>
       </li>
       <li class="list-inline-item">
