--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -11,7 +11,7 @@
           <i class="fa fa-heart"></i></button>
       </li>
       <li class="list-inline-item">
-        <button class="btn btn-primary">
+        <button class="btn btn-primary" routerLink="/members/{{member.username}}" [queryParams]="{tab: 3}">
           <i class="fa fa-envelope"></i></button>
       </li>
     </ul>
