--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,8 +1,11 @@
 <div class="card">
   <div class="card-body">
-    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">No messages yet... say hi by using the message box below</div>
+    <div *ngIf="(messageService.messageThread$ | async)?.length === 0">No messages yet... say hi by using the message
+      box below
+    </div>
 
-    <ul *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
+    <ul #scrollMe style="overflow: scroll;height: 500px" [scrollTop]="scrollMe.scrollHeight"
+        *ngIf="(messageService.messageThread$ | async)?.length > 0" class="chat">
       <li *ngFor="let message of (messageService.messageThread$ | async)">
         <div><span class="chat-img float-right"><img class="rounded-circle"
                                                      src="{{message.senderPhotoUrl || './assets/user.png'}}"
@@ -25,7 +28,7 @@
     <form #messageForm="ngForm" (ngSubmit)="sendMessage()" autocomplete="off">
       <div class="input-group">
         <input name="messageContent" required [(ngModel)]="messageContent"
-          type="text" class="form-control input-sm" placeholder="Send a private message">
+               type="text" class="form-control input-sm" placeholder="Send a private message">
         <div class="input-group-append">
           <button [disabled]="!messageForm.valid" class="btn btn-primary" type="submit">Send</button>
         </div>
